# safedrive

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: ppo_mvp.yaml  sac_mvp.yaml  sac_phase2_curriculum.yaml  sac_phase2_direct.yaml  sac_traffic_curriculum.yaml  smoke_test.yaml
notebooks/: colab_smoke_test.ipynb  phase1_colab_driver.ipynb  phase2_colab_driver.ipynb
reports/: generated_phase1_results.tex  main.tex  references.bib  surrogate_notes.tex
saferl_drive/: __init__.py  algorithms.py  config.py  envs.py  evaluation.py  plotting.py  utils.py
scripts/: compare_runs.py  evaluate.py  evaluate_baseline.py  plot_results.py  record_video.py  sync_drive_runs.py  train.py  train_curriculum.py
tests/: test_priority0.py  test_sync_drive_runs.py
