[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saferl-drive-metadrive-mvp"
version = "0.1.0"
description = "Reproducible MetaDrive control and SAC curriculum experiments with strict evaluation compatibility."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Dheeraj"}]
dependencies = [
    "metadrive-simulator @ git+https://github.com/metadriverse/metadrive.git@85e5dadc6c7436d324348f6e3d8f8e680c06b4db",
    "stable-baselines3[extra]>=2.3.0",
    "gymnasium>=0.29.1,<2.0",
    # Reproducible compiled-package versions for the Colab environment.
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "panda3d==1.10.16",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "tqdm>=4.66",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
    "rich>=13.0",
    "psutil>=5.9",
]

[tool.setuptools]
packages = ["saferl_drive"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
